--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  --color-background: hsl(216, 89%, 14%);
+  --color-blue: hsl(208, 98%, 63%);
+  --color-gray: hsl(210, 2%, 52%);
+  --color-eish: rgb(97, 175, 175);
+  --color-white: white;
+  --border-radius: 5px;
+  background-color: var(--color-background);
+  color: var(--color-white);
+}
+
+html,
+body,
+#root {
+  height: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+ul {
+  margin: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+ul {
+  padding: 0;
+  list-style: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+input,
+button {
+  font-size: 1rem;
+  color: inherit;
+  border: none;
+  border-radius: var(--border-radius);
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100%;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 32px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  gap: 32px;
 }
